# legado

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.cargo/: config.toml
.github/workflows/: Release.yml  build-ios.yml  discord-dm-notify.yml  discord-push-notify.yml  discord-workflow-notify.yml  master-release.yml  quality-gate.yml
crates/reader-core/: Cargo.toml
crates/reader-core/src/: app_state.rs  backup.rs  dto.rs  facade.rs  lib.rs
crates/reader-core/src/crawler/: doh.rs  fetcher.rs  http_client.rs  mod.rs  url_analyzer.rs
crates/reader-core/src/error/: error.rs  mod.rs
crates/reader-core/src/model/: ai_proxy.rs  article_source.rs  book_source.rs  mod.rs  rule.rs
crates/reader-core/src/parser/: js.rs  rule_engine.rs
crates/reader-core/src/service/: book_service.rs  book_source_service.rs  json_document_service.rs  mod.rs  sync_webdav.rs
crates/reader-core/src/source_runtime/: js_source.rs  mod.rs
crates/reader-core/src/storage/db/: mod.rs  repo.rs
crates/reader-core/src/storage/db/migrations/: 0004_book_source_list_index.sql
crates/reader-core/tests/: book_source_compat.rs  cover_cache.rs  db_migrations.rs  http_client_config.rs  js_compat.rs  js_engine_timeout.rs  miaogongzi_import_perf.rs  repository.rs  route_b_facade.rs  source_compat_import.rs  sync_webdav.rs
crates/reader-core/tests/fixtures/book_sources/: wikisource_classics.js
docs/: ai-iteration-log.md  ai-task-status.md  command-matrix.md  critical-remediation-plan.md  data-layout.md  frontend-backend-separation.md  platform-android.md  platform-windows.md  reader-rust-route-b-spec.md  source-compat-matrix.md
reports/gates/2026-06-10-1143-R-P0-002/: summary.md
reports/gates/2026-06-10-1208-R-P0-001-sync-tts-video/: summary.md
reports/gates/2026-06-10-1550-R-P0-001-capabilities-complete/: summary.md
reports/gates/2026-06-10-1818-R-P1-004-contract-scanner/: summary.md
reports/gates/2026-06-10-1846-R-P2-001-android-signing/: summary.md
reports/gates/2026-06-10-1910-R-P2-002-lint-warnings/: summary.md
reports/gates/2026-06-13-CI-CARGO-FETCH-RETRY/: summary.md
reports/gates/2026-06-13-MAINT-IMPORT-UI-PERF/: summary.md
reports/gates/2026-06-13-PERF-APP-SHELL-SPLIT/: summary.md
reports/gates/2026-06-13-PERF-EXTENSION-EXAMPLES-LAZY/: summary.md
reports/gates/2026-06-13-PERF-FRONTEND-PLUGIN-BARREL-CUT/: summary.md
reports/gates/2026-06-13-PERF-FRONTEND-PLUGIN-RUNTIME-SPLIT/: summary.md
reports/gates/2026-06-13-PERF-LAZY-FRONTEND-CHUNKS/: summary.md
reports/gates/2026-06-13-PERF-MODULEPRELOAD-PRUNE/: summary.md
reports/gates/2026-06-13-PERF-NAIVE-PARTIAL-REGISTER/: summary.md
scripts/: booksource-node-runtime.mjs  copy-build-result.mjs  copy-harmony-web.mjs
scripts/ci/: check-command-contract.mjs  check-env.mjs  check-plugin-examples.mjs  check-scripts.mjs  cleanup-build.mjs  generate-gate-report.mjs  quality-gate.mjs  quality-gate.ps1  run-command.mjs  source-compat.mjs  write-report.mjs
src/: App.vue  main.ts
src-headless/: Cargo.toml
src-headless/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test-common-controls.manifest
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  ws_server.rs
src-tauri/src/commands/: backup_probe.rs  bookshelf.rs  comic_cover.rs  config.rs  extension.rs  fonts.rs  mod.rs  router.rs  source.rs  source_update.rs  sync_misc.rs  system.rs
src-tauri/tests/: ws_router.rs
src/components/: AppUpdateDialog.vue  BookCoverImg.vue  BookSourceEditorModal.vue  BookSourceInstallDialog.vue  BookSourceLimitWarningDialog.vue  FrontendPluginDialog.vue  GlobalFeedbackMirror.vue  LegadoDeepLinkDialog.vue  PrefetchProgressBar.vue  ScriptDialog.vue  WsConnectDialog.vue
src/composables/: useAiAgent.ts  useAppConfig.ts  useAppUpdateDownload.ts  useBackAwareDialog.ts  useBackup.ts  useBookDetailDrawerState.ts  useBookSource.ts  useBookshelf.ts  useBrowserProbe.ts  useCapabilities.ts  useDynamicConfig.ts  useEnv.ts  useEventBus.ts  useExploreBridge.ts  useExploreCategoryCache.ts  useExtension.ts  useExternalOpen.ts  useFileSrc.ts  useFrontendPlugins.ts  useFrontendStorage.ts  useInlineBookReader.ts  useInvoke.ts  useLegadoDeepLink.ts  useOverlay.ts  useRemoteDebug.ts  useShelfGroups.ts  useShelfPullRefresh.ts  useSync.ts  useTocAutoUpdate.ts  useTransport.ts  useTts.ts  useTtsState.ts  useUserFonts.ts  useVConsole.ts
src/data/: builtinPlugins.ts  extensionExamples.ts
src/plugins/: naiveComponents.ts
src/stores/: appConfig.ts  backStack.ts  bookSource.ts  bookshelf.ts  index.ts  musicPlayer.ts  navigation.ts  preferences.ts  prefetch.ts  privacyMode.ts  scriptBridge.ts
src/styles/: reader.css  theme.css  tokens.css
src/types/: index.ts  shelfGroup.ts
src/utils/: appUpdate.ts  async.ts  bookMeta.ts  bookSourceSwitch.ts  chapter.ts  exportFile.ts  logger.ts  searchAggregation.ts
src/views/: BookSourceView.vue  BookshelfView.vue  ExploreView.vue  ExtensionsView.vue  SearchView.vue  SettingsView.vue
(+168 files in other folders)
