[workspace]
members = ["crates/reader-core", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77"

[workspace.dependencies]
anyhow = "1"
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
futures = "0.3"
hex = "0.4"
http = "1"
jsonpath_lib = "0.3"
md-5 = "0.10"
once_cell = "1"
regex = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "gzip",
  "brotli",
  "deflate",
  "blocking",
  "cookies",
] }
rquickjs = { version = "0.7", features = ["bindgen", "futures"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
sxd-document = "0.3"
sxd-xpath = "0.4"
tauri = { version = "2.11.0", features = ["protocol-asset"] }
tauri-build = "2.5.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2.5.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
